# simple-terminal-emulator

./: CMakeLists.txt  README.md  main.c
